@@ -16,14 +16,8 @@
 
 package org.apache.harmony.luni.tests.java.lang;
 
-import dalvik.annotation.TestTargets;
-import dalvik.annotation.TestLevel;
-import dalvik.annotation.TestTargetNew;
-import dalvik.annotation.TestTargetClass;
-
 import junit.framework.TestCase;
 
-@TestTargetClass(Short.class) 
 public class ShortTest extends TestCase {
     private Short sp = new Short((short) 18000);
     private Short sn = new Short((short) -19000);
@@ -31,12 +25,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#byteValue()
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL_COMPLETE,
-        notes = "Checks boundary values.",
-        method = "byteValue",
-        args = {}
-    )
     public void test_byteValue() {
         // Test for method byte java.lang.Short.byteValue()
         assertEquals("Returned incorrect byte value", 0, new Short(Short.MIN_VALUE)
@@ -48,12 +36,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#compareTo(java.lang.Short)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "compareTo",
-        args = {java.lang.Short.class}
-    )
     public void test_compareToLjava_lang_Short() {
         // Test for method int java.lang.Short.compareTo(java.lang.Short)
         Short s = new Short((short) 1);
@@ -79,12 +61,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#decode(java.lang.String)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL,
-        notes = "Doesn't check that no whitespace characters are permitted in the String. ",
-        method = "decode",
-        args = {java.lang.String.class}
-    )    
     public void test_decodeLjava_lang_String2() {
         // Test for method java.lang.Short
         // java.lang.Short.decode(java.lang.String)
@@ -153,12 +129,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#parseShort(java.lang.String)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "parseShort",
-        args = {java.lang.String.class}
-    )
     public void test_parseShortLjava_lang_String2() {
         // Test for method short java.lang.Short.parseShort(java.lang.String)
         short sp = Short.parseShort("32746");
@@ -194,12 +164,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#parseShort(java.lang.String, int)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "parseShort",
-        args = {java.lang.String.class, int.class}
-    )
     public void test_parseShortLjava_lang_StringI2() {
         // Test for method short java.lang.Short.parseShort(java.lang.String,
         // int)
@@ -293,12 +257,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#toString()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "toString",
-        args = {}
-    )
     public void test_toString2() {
         // Test for method java.lang.String java.lang.Short.toString()
         assertTrue("Invalid string returned", sp.toString().equals("18000")
@@ -314,12 +272,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#toString(short)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL_COMPLETE,
-        notes = "",
-        method = "toString",
-        args = {short.class}
-    )
     public void test_toStringS2() {
         // Test for method java.lang.String java.lang.Short.toString(short)
         assertEquals("Returned incorrect string", "32767", Short.toString((short) 32767)
@@ -333,12 +285,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#valueOf(java.lang.String)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL_COMPLETE,
-        notes = "Checks boundary values.",
-        method = "valueOf",
-        args = {java.lang.String.class}
-    )
     public void test_valueOfLjava_lang_String2() {
         // Test for method java.lang.Short
         // java.lang.Short.valueOf(java.lang.String)
@@ -351,12 +297,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#valueOf(java.lang.String, int)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "valueOf",
-        args = {java.lang.String.class, int.class}
-    )
     public void test_valueOfLjava_lang_StringI2() {
         // Test for method java.lang.Short
         // java.lang.Short.valueOf(java.lang.String, int)
@@ -400,37 +340,25 @@ public class ShortTest extends TestCase {
         fail(
                 "Failed to throw exception when passed string larger than 16 bits");
     }
-    /**
-     * @tests java.lang.Short#valueOf(short)
-     */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "valueOf",
-        args = {short.class}
-    )
-    public void test_valueOfS() {
-        assertEquals(new Short(Short.MIN_VALUE), Short.valueOf(Short.MIN_VALUE));
-        assertEquals(new Short(Short.MAX_VALUE), Short.valueOf(Short.MAX_VALUE));
-        assertEquals(new Short((short) 0), Short.valueOf((short) 0));
+	/**
+	 * @tests java.lang.Short#valueOf(byte)
+	 */
+	public void test_valueOfS() {
+		assertEquals(new Short(Short.MIN_VALUE), Short.valueOf(Short.MIN_VALUE));
+		assertEquals(new Short(Short.MAX_VALUE), Short.valueOf(Short.MAX_VALUE));
+		assertEquals(new Short((short) 0), Short.valueOf((short) 0));
 
-        short s = -128;
-        while (s < 128) {
-            assertEquals(new Short(s), Short.valueOf(s));
-            assertSame(Short.valueOf(s), Short.valueOf(s));
-            s++;
-        }
-    }
+		short s = -128;
+		while (s < 128) {
+			assertEquals(new Short(s), Short.valueOf(s));
+			assertSame(Short.valueOf(s), Short.valueOf(s));
+			s++;
+		}
+	}
     
     /**
      * @tests java.lang.Short#hashCode()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "hashCode",
-        args = {}
-    )
     public void test_hashCode() {
         assertEquals(1, new Short((short)1).hashCode());
         assertEquals(2, new Short((short)2).hashCode());
@@ -441,12 +369,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#Short(String)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "Short",
-        args = {java.lang.String.class}
-    )
     public void test_ConstructorLjava_lang_String() {
         assertEquals(new Short((short)0), new Short("0"));
         assertEquals(new Short((short)1), new Short("1"));
@@ -476,12 +398,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#Short(short)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "Short",
-        args = {short.class}
-    )
     public void test_ConstructorS() {
         assertEquals(1, new Short((short)1).shortValue());
         assertEquals(2, new Short((short)2).shortValue());
@@ -492,13 +408,7 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#byteValue()
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL_COMPLETE,
-        notes = "Doesn't check boundary values.",
-        method = "byteValue",
-        args = {}
-    )
-    public void test_byteValue1() {
+    public void test_booleanValue() {
         assertEquals(1, new Short((short)1).byteValue());    
         assertEquals(2, new Short((short)2).byteValue());
         assertEquals(0, new Short((short)0).byteValue());
@@ -508,12 +418,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#equals(Object)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "equals",
-        args = {java.lang.Object.class}
-    )
     public void test_equalsLjava_lang_Object() {
         assertEquals(new Short((short)0), Short.valueOf((short)0));
         assertEquals(new Short((short)1), Short.valueOf((short)1));
@@ -528,12 +432,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#toString()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "toString",
-        args = {}
-    )
     public void test_toString() {
         assertEquals("-1", new Short((short)-1).toString());
         assertEquals("0", new Short((short)0).toString());
@@ -544,12 +442,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#toString(short)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL_COMPLETE,
-        notes = "",
-        method = "toString",
-        args = {short.class}
-    )
     public void test_toStringS() {
         assertEquals("-1", Short.toString((short)-1));
         assertEquals("0", Short.toString((short)0));
@@ -560,12 +452,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#valueOf(String)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL_COMPLETE,
-        notes = "Doesn't check boundary values.",
-        method = "valueOf",
-        args = {java.lang.String.class}
-    )
     public void test_valueOfLjava_lang_String() {
         assertEquals(new Short((short)0), Short.valueOf("0"));
         assertEquals(new Short((short)1), Short.valueOf("1"));
@@ -595,12 +481,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#valueOf(String,int)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "valueOf",
-        args = {java.lang.String.class, int.class}
-    )
     public void test_valueOfLjava_lang_StringI() {
         assertEquals(new Short((short)0), Short.valueOf("0", 10));
         assertEquals(new Short((short)1), Short.valueOf("1", 10));
@@ -634,12 +514,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#parseShort(String)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL,
-        notes = "Doesn't check boundary values, unicodes.",
-        method = "parseShort",
-        args = {java.lang.String.class}
-    )
     public void test_parseShortLjava_lang_String() {
         assertEquals(0, Short.parseShort("0"));
         assertEquals(1, Short.parseShort("1"));
@@ -669,12 +543,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#parseShort(String,int)
      */
-    @TestTargetNew(
-        level = TestLevel.PARTIAL,
-        notes = "Doesn't check boundary values.",
-        method = "parseShort",
-        args = {java.lang.String.class, int.class}
-    )
     public void test_parseShortLjava_lang_StringI() {
         assertEquals(0, Short.parseShort("0", 10));
         assertEquals(1, Short.parseShort("1", 10));
@@ -708,12 +576,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#decode(String)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "decode",
-        args = {java.lang.String.class}
-    )
     public void test_decodeLjava_lang_String() {
         assertEquals(new Short((short)0), Short.decode("0"));
         assertEquals(new Short((short)1), Short.decode("1"));
@@ -722,13 +584,6 @@ public class ShortTest extends TestCase {
         assertEquals(new Short((short)0xF), Short.decode("#F"));
         assertEquals(new Short((short)0xF), Short.decode("0XF"));
         assertEquals(new Short((short)07), Short.decode("07"));
-        
-        try {
-            Short.decode(" 0 ");
-            fail("NumberFormatException is not thrown.");
-        } catch(NumberFormatException nfe) {
-            //expected
-        }
         
         try {
             Short.decode("9.2");
@@ -750,12 +605,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#doubleValue()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "doubleValue",
-        args = {}
-    )
     public void test_doubleValue() {
         assertEquals(-1D, new Short((short)-1).doubleValue(), 0D);
         assertEquals(0D, new Short((short)0).doubleValue(), 0D);
@@ -765,12 +614,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#floatValue()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "floatValue",
-        args = {}
-    )
     public void test_floatValue() {
         assertEquals(-1F, new Short((short)-1).floatValue(), 0F);
         assertEquals(0F, new Short((short)0).floatValue(), 0F);
@@ -780,12 +623,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#intValue()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "intValue",
-        args = {}
-    )
     public void test_intValue() {
         assertEquals(-1, new Short((short)-1).intValue());
         assertEquals(0, new Short((short)0).intValue());
@@ -795,12 +632,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#longValue()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "longValue",
-        args = {}
-    )
     public void test_longValue() {
         assertEquals(-1L, new Short((short)-1).longValue());
         assertEquals(0L, new Short((short)0).longValue());
@@ -810,12 +641,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#shortValue()
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "shortValue",
-        args = {}
-    )
     public void test_shortValue() {
         assertEquals(-1, new Short((short)-1).shortValue());
         assertEquals(0, new Short((short)0).shortValue());
@@ -825,12 +650,6 @@ public class ShortTest extends TestCase {
     /**
      * @tests java.lang.Short#reverseBytes(short)
      */
-    @TestTargetNew(
-        level = TestLevel.COMPLETE,
-        notes = "",
-        method = "reverseBytes",
-        args = {short.class}
-    )
     public void test_reverseBytesS() {
         assertEquals((short)0xABCD, Short.reverseBytes((short)0xCDAB));
         assertEquals((short)0x1234, Short.reverseBytes((short)0x3412));
